# nologger

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  pyproject.toml  run_demo.py
.github/workflows/: ci.yml  publish.yml
nologger/: __init__.py  config.py  context.py  core.py  decorators.py  formatter.py  handlers.py  utils.py
tests/: test_config.py  test_context.py  test_utils.py
